--- a/src/routes/Projects.css
+++ b/src/routes/Projects.css
@@ -152,7 +152,8 @@
 
         .project_all_card {
           grid-template-columns: 1fr;
-          margin-left: -36px
+          margin-left: -30px;
+          margin-top: -75px;
         }
 
         .project_all_card {
@@ -176,9 +177,4 @@
             border: 2px solid transparent
       }
   }
-                /*iPhone XR*/
-  /* @media only screen and (max-width: 640px) {
-    .project_card {
-        margin-left: 65px;
-    }
-  } */
+               
